# Customer-Financial-Health-Analyzer

./: .gitignore  Dockerfile.pdf_parser  Dockerfile.storyteller  Dockerfile.timeline  JustFile  README.md  ad.py  app.py  docker-compose.yml  main.py  parser2.py  pyproject.toml  server.py  service.py
config/: config.yaml  logging.yaml
data/output/: all_customers_info.json  all_transactions.csv  categorized.csv  nlp_response.txt  stories.txt  timeline.csv
data/output/all_transactions.csv/: all_customers_info.json  all_transactions.csv
data/output/analysis/: anomalies.csv  fees.csv  patterns.txt  recurring.csv
data/output/charts/: visualization_data.json
data/state/: financial_memory.json
llm_setup/: __init__.py  config.py  ollama_manager.py
logs/mlruns/352981871570841202/: meta.yaml
logs/mlruns/352981871570841202/001fdf0cfe9f4ca88737dd0c202d57b0/: meta.yaml
logs/mlruns/352981871570841202/00cba84c6be641f9869eabc80bea29d0/: meta.yaml
logs/mlruns/352981871570841202/02c12a7393c8433aa7e972909df12f4d/: meta.yaml
logs/mlruns/371338309642355920/: meta.yaml
logs/mlruns/417310941332047470/: meta.yaml
logs/mlruns/859334776741786322/: meta.yaml
project_docs/: mkdocs.yml
project_docs/docs/: api.md  architecture.md  experience.md  features.md  index.md  installation.md  usage.md
src/: __init__.py  analyzer.py  api.py  categorizer.py  models.py  nlp_processor.py  pdf_parser.py  storyteller.py  storyteller_api.py  timeline.py  timeline_api.py  utils.py  visualizer.py  workflows.py
ui/: index.html
ui/static/css/: styles.css
ui/static/js/: script.js
(+2723 files in other folders)
