[project]
name = "customer-financial-health-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.8",
    "camelot-py[cv]>=1.0.0",
    "fastapi[standard]>=0.115.12",
    "fastapi-responses>=0.2.1",
    "fpdf>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "jpype1>=1.5.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "prefect>=3.3.4",
    "pydantic>=2.11.3",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.5",
    "tabula-py>=2.10.0",
    "streamlit>=1.44.1",
    "plotly>=6.0.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.10",
]

[tool.ruff]
select = ["ALL"]  # Enables all rules
